--- a/site_stylesheet.css
+++ b/site_stylesheet.css
@@ -16,49 +16,63 @@ div#header {
 @keyframes rollUpFirstBanner {
 	0% {
 		opacity: 1;
-		/*height: 100px; 
-		padding-top: 15px;*/
+		height: 100px; 
+		padding-top: 15px;
+	}
+	57.14% {
+		opacity: 1;
+		height: 100px; 
+		padding-top: 15px;
 	}
 	99.99% {
 	    opacity: 0;
-		/*height: 100px; 
-		padding-top: 15px;*/
+		height: 100px; 
+		padding-top: 15px;
 	}
 	100% {
 	    opacity: 0;
-		/*height: 0px; 
-		padding-top: 0px;*/
+		height: 0px; 
+		padding-top: 0px;
 	}
 }
 @-webkit-keyframes rollUpFirstBanner {
 	0% {
 		opacity: 1;
-		/*height: 100px; 
-		padding-top: 15px;*/
+		height: 100px; 
+		padding-top: 15px;
+	}
+	57.14% {
+		opacity: 1;
+		height: 100px; 
+		padding-top: 15px;
 	}
 	99.99% {
 	    opacity: 0;
-		/*height: 100px; 
-		padding-top: 15px;*/
+		height: 100px; 
+		padding-top: 15px;
 	}
 	100% {
 	    opacity: 0;
-		/*height: 0px; 
-		padding-top: 0px;*/
+		height: 0px; 
+		padding-top: 0px;
 	}
 }
 div#firstbanner {
-	height: 100px; 
+	opacity: 0; /* Hacky fix for setting defaults if animation does not play. Should be 1. */
+	height: 0px; /* Hacky fix for setting defaults if animation does not play. Should be 100px. */ 
 	padding-top: 15px;
 	font-weight: 500;
 	color: #444;
 	letter-spacing: 1px;
 	overflow: hidden;
-	animation: 1.5s ease-in-out 2s 1 rollUpFirstBanner forwards;
-	-webkit-animation: 1.5s ease-in-out 2s 1 rollUpFirstBanner forwards;
+	animation: 3.5s ease-in-out 0s 1 rollUpFirstBanner forwards; /* 1.5s dur 2s del */
+	-webkit-animation: 3.5s ease-in-out 0s 1 rollUpFirstBanner forwards;
 }
 @keyframes rollUpBannerContainer {
 	0% {
+		height: 115px;
+	}
+	70% {
 		height: 115px;
 	}
 	100% {
@@ -69,15 +83,18 @@ div#firstbanner {
 	0% {
 		height: 115px;
 	}
+	70% {
+		height: 115px;
+	}
 	100% {
 		height: 65px;
 	}
 }
 div#bannercontainer{
-	height: 115px;
+	height: 65px; /* Hacky fix for setting defaults if animation does not play. Should be 115px. */
 	overflow: hidden;
-	animation: 1.5s ease-in-out 3.5s 1 rollUpBannerContainer forwards;
-	-webkit-animation: 1.5s ease-in-out 3.5s 1 rollUpBannerContainer forwards;
+	animation: 5s ease-in-out 0s 1 rollUpBannerContainer forwards; /* 1.5s dur 3.5s del */
+	-webkit-animation: 5s ease-in-out 0s 1 rollUpBannerContainer forwards;
 }
 div#bigfirstbannertext {
 	font-size: 1.45em;
@@ -89,6 +106,9 @@ div#smallfirstbannertext {
 	0% {
 		opacity: 0;
 	}
+	78.3% {
+		opacity: 0;	
+	}
 	100% {
 	    opacity: 1;
 	}
@@ -97,20 +117,23 @@ div#smallfirstbannertext {
 	0% {
 		opacity: 0;
 	}
+	78.3% {
+		opacity: 0;	
+	}
 	100% {
 	    opacity: 1;
 	}
 }
 div#secondbanner {
-	opacity: 0;
+	opacity: 1; /* Hacky fix for setting defaults if animation does not play. Should be 0. */
 	height: 43px; 
 	padding-top: 25px;
 	font-weight: 500;
 	color: #444;
 	letter-spacing: 1px;
 	overflow: hidden;
-	animation: 1s ease-in-out 3.6s 1 displaySecondBanner forwards;
-	-webkit-animation: 1s ease-in-out 3.6s 1 displaySecondBanner forwards;
+	animation: 4.6s ease-in-out 0s 1 displaySecondBanner forwards; /* 1s dur 3.6s del */
+	-webkit-animation: 4.6s ease-in-out 0s 1 displaySecondBanner forwards;
 }
 div#secondbannertext {
 	font-size: 2em;
