--- a/site_stylesheet.css
+++ b/site_stylesheet.css
@@ -60,7 +60,7 @@ div#header {
 div#firstbanner {
 	opacity: 0; /* Hacky fix for setting defaults if animation does not play. Should be 1. */
 	height: 0px; /* Hacky fix for setting defaults if animation does not play. Should be 100px. */ 
-	padding-top: 15px;
+	padding-top: 0px; /* Hacky fix for setting defaults if animation does not play. Should be 15px. */ 
 	font-weight: 500;
 	color: #444;
 	letter-spacing: 1px;
