--- a/site_stylesheet.css
+++ b/site_stylesheet.css
@@ -68,7 +68,7 @@ div#firstbanner {
 	color: #444;
 	letter-spacing: 1px;
 	overflow: hidden;
-	animation: 3.5s ease-in-out 0s 1 rollUpFirstBanner forwards; /* 1.5s dur 2s del */
+	/* animation: 3.5s ease-in-out 0s 1 rollUpFirstBanner forwards; /* 1.5s dur 2s del */
 	-webkit-animation: 3.5s ease-in-out 0s 1 fadeFirstBanner forwards, 3.5s ease-in-out 0s 1 rollUpFirstBanner forwards;
 }
 @keyframes rollUpBannerContainer {
