--- a/site_stylesheet.css
+++ b/site_stylesheet.css
@@ -13,13 +13,20 @@ div#header {
     text-align: center;
 	letter-spacing: 0.8px;
 }
-@keyframes rollUpFirstBanner {
+@keyframes setDefaultsFirstBanner {
 	0% {
+	    opacity: 0;
+		height: 0px; 
+		padding-top: 0px;
+	}
+	100% {
 		opacity: 1;
 		height: 100px; 
 		padding-top: 15px;
 	}
-	57.14% {
+}
+@keyframes fadeAndRollUpFirstBanner {
+	0% {
 		opacity: 1;
 		height: 100px; 
 		padding-top: 15px;
@@ -35,58 +42,72 @@ div#header {
 		padding-top: 0px;
 	}
 }
-@-webkit-keyframes fadeFirstBanner {
+@-webkit-keyframes setDefaultsFirstBanner {
+	0% {
+	    opacity: 0;
+		height: 0px; 
+		padding-top: 0px;
+	}
+	100% {
+		opacity: 1;
+		height: 100px; 
+		padding-top: 15px;
+	}
+}
+@-webkit-keyframes fadeAndRollUpFirstBanner {
 	0% {
 		opacity: 1;
+		height: 100px; 
+		padding-top: 15px;
 	}
-	57% {
-		opacity: 1;
+	99.99% {
+	    opacity: 0;
+		height: 100px; 
+		padding-top: 15px;
 	}
 	100% {
 	    opacity: 0;
-	}
-}
-@-webkit-keyframes rollUpFirstBanner {
-	0% {
-		height: 100px; 
-		padding-top: 15px;
-	}
-	99% {
-		height: 100px; 
-		padding-top: 15px;
-	}
-	100% {
 		height: 0px; 
 		padding-top: 0px;
 	}
 }
 div#firstbanner {
 	opacity: 0; /* Hacky fix for setting defaults if animation does not play. Should be 1. */
-	height: 0px; /* Hacky fix for setting defaults if animation does not play. Should be 100px. */ 
-	padding-top: 0px; /* Hacky fix for setting defaults if animation does not play. Should be 15px. */ 
+	height: 0px; /* Hacky fix for setting defaults if animation does not play. Should be 100px. */
+	padding-top: 0px; /* Hacky fix for setting defaults if animation does not play. Should be 15px. */
 	font-weight: 500;
 	color: #444;
 	letter-spacing: 1px;
 	overflow: hidden;
-	/* animation: 3.5s ease-in-out 0s 1 rollUpFirstBanner forwards; /* 1.5s dur 2s del */
-	-webkit-animation: 3.5s ease-in-out 0s 1 fadeFirstBanner forwards, 3.5s ease-in-out 0s 1 rollUpFirstBanner forwards;
+	animation: 0s 0s 1 setDefaultsFirstBanner forwards, 1.5s ease-in-out 2s 1 fadeAndRollUpFirstBanner forwards;
+	-webkit-animation: 0s 0s 1 setDefaultsFirstBanner forwards, 1.5s ease-in-out 2s 1 fadeAndRollUpFirstBanner forwards;
+}
+@keyframes setDefaultsBannerContainer {
+	0% {
+		height: 65px;
+	}
+	100% {
+		height: 115px;
+	}
 }
 @keyframes rollUpBannerContainer {
 	0% {
-		height: 115px;
-	}
-	70% {
 		height: 115px;
 	}
 	100% {
 		height: 65px;
 	}
 }
-@-webkit-keyframes rollUpBannerContainer {
+@-webkit-keyframes setDefaultsBannerContainer {
 	0% {
+		height: 65px;
+	}
+	100% {
 		height: 115px;
 	}
-	70% {
+}
+@-webkit-keyframes rollUpBannerContainer {
+	0% {
 		height: 115px;
 	}
 	100% {
@@ -94,10 +115,10 @@ div#firstbanner {
 	}
 }
 div#bannercontainer{
-	height: 65px; /* Hacky fix for setting defaults if animation does not play. Should be 115px. */
+	height: 65px;  /* Hacky fix for setting defaults if animation does not play. Should be 115px. */
 	overflow: hidden;
-	animation: 5s ease-in-out 0s 1 rollUpBannerContainer forwards; /* 1.5s dur 3.5s del */
-	-webkit-animation: 5s ease-in-out 0s 1 rollUpBannerContainer forwards;
+	animation: 0s 0s 1 setDefaultsBannerContainer forwards, 1.5s ease-in-out 3.5s 1 rollUpBannerContainer forwards;
+	-webkit-animation: 0s 0s 1 setDefaultsBannerContainer forwards, 1.5s ease-in-out 3.5s 1 rollUpBannerContainer forwards;
 }
 div#bigfirstbannertext {
 	font-size: 1.45em;
@@ -105,23 +126,33 @@ div#bigfirstbannertext {
 div#smallfirstbannertext {
 	font-size: 1.1em;
 }
+@keyframes setDefaultsSecondBanner {
+	0% {
+		opacity: 1;
+	}
+	100% {
+	    opacity: 0;
+	}
+}
 @keyframes displaySecondBanner {
 	0% {
 		opacity: 0;
-	}
-	78.3% {
-		opacity: 0;	
 	}
 	100% {
 	    opacity: 1;
 	}
 }
+@-webkit-keyframes setDefaultsSecondBanner {
+	0% {
+		opacity: 1;
+	}
+	100% {
+	    opacity: 0;
+	}
+}
 @-webkit-keyframes displaySecondBanner {
 	0% {
 		opacity: 0;
-	}
-	78.3% {
-		opacity: 0;	
 	}
 	100% {
 	    opacity: 1;
@@ -135,8 +166,8 @@ div#secondbanner {
 	color: #444;
 	letter-spacing: 1px;
 	overflow: hidden;
-	animation: 4.6s ease-in-out 0s 1 displaySecondBanner forwards; /* 1s dur 3.6s del */
-	-webkit-animation: 4.6s ease-in-out 0s 1 displaySecondBanner forwards;
+	animation: 0s 0s 1 setDefaultsSecondBanner forwards, 1s ease-in-out 3.6s 1 displaySecondBanner forwards;
+	-webkit-animation: 0s 0s 1 setDefaultsSecondBanner forwards, 1s ease-in-out 3.6s 1 displaySecondBanner forwards;
 }
 div#secondbannertext {
 	font-size: 2em;
