More tests for Android compatibility.

--- a/site_stylesheet.css
+++ b/site_stylesheet.css
@@ -17,32 +17,39 @@ div#header {
 	0% {
 		opacity: 0.1;
 		width: 9px;
+		height: 20px;
 	}
 	50% {
 		opacity: 0.1;
 		width: 10px;
+		height: 20px;
 	}
 	100% {
 	    opacity: 0.2;
 		width: 10px;
+		height: 200px;
 	}
 }
 @-webkit-keyframes testAnimation {
 	0% {
 		opacity: 0.1;
 		width: 9px;
+		height: 20px;
 	}
 	50% {
 		opacity: 0.1;
 		width: 10px;
+		height: 20px;
 	}
 	100% {
 	    opacity: 0.2;
 		width: 10px;
+		height: 200px;
 	}
 }
 div#anim_test {
 	width: 10px;
+	height: 10px;
 	opacity: 1;
 	animation: 0.0001s 0s 1 testAnimation forwards;
 	-webkit-animation: 0.0001s 0s 1 testAnimation forwards;
