--- a/site_stylesheet.css
+++ b/site_stylesheet.css
@@ -51,8 +51,8 @@ div#anim_test {
 	width: 10px;
 	height: 10px;
 	opacity: 1;
-	animation: 0.0001s 0s 1 testAnimation forwards;
-	-webkit-animation: 0.0001s 0s 1 testAnimation forwards;
+	animation: 0.0001s ease-in-out 0s 1 testAnimation forwards;
+	-webkit-animation: 0.0001s ease-in-out 0s 1 testAnimation forwards;
 }
 @keyframes fadeAndRollUpFirstBanner {
 	0% {
