--- a/site_stylesheet.css
+++ b/site_stylesheet.css
@@ -13,39 +13,73 @@ div#header {
     text-align: center;
 	letter-spacing: 0.8px;
 }
-@keyframes testAnimation {
+@keyframes testAnimation1 {
 	0% {
 		opacity: 0.1;
-		width: 90px;
+		width: 15px;
 	}
 	50% {
 		opacity: 0.1;
-		width: 100px;
+		width: 10px;
 	}
 	100% {
 	    opacity: 0.2;
-		width: 100px;
+		width: 10px;
 	}
 }
-@-webkit-keyframes testAnimation {
+@-webkit-keyframes testAnimation1 {
 	0% {
 		opacity: 0.1;
-		width: 90px;
+		width: 15px;
 	}
 	50% {
 		opacity: 0.1;
-		width: 100px;
+		width: 10px;
 	}
 	100% {
 	    opacity: 0.2;
-		width: 100px;
+		width: 10px;
 	}
 }
-div#anim_test {
-	width: 100px;
+div#anim_test_1 {
+	width: 10px;
 	opacity: 1;
-	animation: 0.0001s 0s 1 testAnimation forwards;
-	-webkit-animation: 0.0001s 0s 1 testAnimation forwards;
+	animation: 0.001s ease-in-out 0s 1 testAnimation1 forwards;
+	-webkit-animation: 0.001s ease-in-out 0s 1 testAnimation1 forwards;
+}
+@keyframes testAnimation2 {
+	0% {
+		opacity: 0.1;
+		width: 15px;
+	}
+	50% {
+		opacity: 0.1;
+		width: 10px;
+	}
+	100% {
+	    opacity: 0.2;
+		width: 10px;
+	}
+}
+@-webkit-keyframes testAnimation2 {
+	0% {
+		opacity: 0.1;
+		width: 15px;
+	}
+	50% {
+		opacity: 0.1;
+		width: 10px;
+	}
+	100% {
+	    opacity: 0.2;
+		width: 10px;
+	}
+}
+div#anim_test_2 {
+	width: 10px;
+	opacity: 1;
+	animation: 0.001s 0s 1 testAnimation2 forwards;
+	-webkit-animation: 0.001s 0s 1 testAnimation2 forwards;
 }
 @keyframes fadeAndRollUpFirstBanner {
 	0% {
@@ -88,8 +122,8 @@ div#firstbanner {
 	color: #444;
 	letter-spacing: 1px;
 	overflow: hidden;
-	animation: 1.5s 2s 1 fadeAndRollUpFirstBanner forwards;
-	-webkit-animation: 1.5s 2s 1 fadeAndRollUpFirstBanner forwards;
+	animation: 1.5s ease-in-out 2s 1 fadeAndRollUpFirstBanner forwards;
+	-webkit-animation: 1.5s ease-in-out 2s 1 fadeAndRollUpFirstBanner forwards;
 }
 @keyframes rollUpBannerContainer {
 	0% {
@@ -110,8 +144,8 @@ div#firstbanner {
 div#bannercontainer{
 	height: 115px;
 	overflow: hidden;
-	animation: 1.5s 3.5s 1 rollUpBannerContainer forwards;
-	-webkit-animation: 1.5s 3.5s 1 rollUpBannerContainer forwards;
+	animation: 1.5s ease-in-out 3.5s 1 rollUpBannerContainer forwards;
+	-webkit-animation: 1.5s ease-in-out 3.5s 1 rollUpBannerContainer forwards;
 }
 div#bigfirstbannertext {
 	font-size: 1.45em;
@@ -143,8 +177,8 @@ div#secondbanner {
 	color: #444;
 	letter-spacing: 1px;
 	overflow: hidden;
-	animation: 1s 3.6s 1 displaySecondBanner forwards;
-	-webkit-animation: 1s 3.6s 1 displaySecondBanner forwards;
+	animation: 1s ease-in-out 3.6s 1 displaySecondBanner forwards;
+	-webkit-animation: 1s ease-in-out 3.6s 1 displaySecondBanner forwards;
 }
 div#secondbannertext {
 	font-size: 2em;
