--- a/site_stylesheet.css
+++ b/site_stylesheet.css
@@ -83,6 +83,21 @@ div#anim_test_2 {
 }
 @keyframes fadeAndRollUpFirstBanner {
 	0% {
+		opacity: 0;
+		height: 100px; 
+		padding-top: 15px;
+	}
+	10% {
+		opacity: 0;
+		height: 100px; 
+		padding-top: 15px;
+	}
+	40% {
+		opacity: 1;
+		height: 100px; 
+		padding-top: 15px;
+	}
+	70% {
 		opacity: 1;
 		height: 100px; 
 		padding-top: 15px;
@@ -100,6 +115,21 @@ div#anim_test_2 {
 }
 @-webkit-keyframes fadeAndRollUpFirstBanner {
 	0% {
+		opacity: 0;
+		height: 100px; 
+		padding-top: 15px;
+	}
+	10% {
+		opacity: 0;
+		height: 100px; 
+		padding-top: 15px;
+	}
+	40% {
+		opacity: 1;
+		height: 100px; 
+		padding-top: 15px;
+	}
+	70% {
 		opacity: 1;
 		height: 100px; 
 		padding-top: 15px;
@@ -116,14 +146,15 @@ div#anim_test_2 {
 	}
 }
 div#firstbanner {
+	opacity: 0;
 	height: 100px; 
 	padding-top: 15px;
 	font-weight: 500;
 	color: #444;
 	letter-spacing: 1px;
 	overflow: hidden;
-	animation: 1.5s ease-in-out 2s 1 fadeAndRollUpFirstBanner forwards;
-	-webkit-animation: 1.5s ease-in-out 2s 1 fadeAndRollUpFirstBanner forwards;
+	animation: 5s ease-in-out 0s 1 fadeAndRollUpFirstBanner forwards;
+	-webkit-animation: 5s ease-in-out 0s 1 fadeAndRollUpFirstBanner forwards;
 }
 @keyframes rollUpBannerContainer {
 	0% {
@@ -144,8 +175,8 @@ div#firstbanner {
 div#bannercontainer{
 	height: 115px;
 	overflow: hidden;
-	animation: 1.5s ease-in-out 3.5s 1 rollUpBannerContainer forwards;
-	-webkit-animation: 1.5s ease-in-out 3.5s 1 rollUpBannerContainer forwards;
+	animation: 1.5s ease-in-out 5s 1 rollUpBannerContainer forwards;
+	-webkit-animation: 1.5s ease-in-out 5s 1 rollUpBannerContainer forwards;
 }
 div#bigfirstbannertext {
 	font-size: 1.45em;
@@ -177,8 +208,8 @@ div#secondbanner {
 	color: #444;
 	letter-spacing: 1px;
 	overflow: hidden;
-	animation: 1s ease-in-out 3.6s 1 displaySecondBanner forwards;
-	-webkit-animation: 1s ease-in-out 3.6s 1 displaySecondBanner forwards;
+	animation: 1s ease-in-out 5.1s 1 displaySecondBanner forwards;
+	-webkit-animation: 1s ease-in-out 5.1s 1 displaySecondBanner forwards;
 }
 div#secondbannertext {
 	font-size: 2em;
