--- a/site_stylesheet.css
+++ b/site_stylesheet.css
@@ -167,8 +167,7 @@ div#firstbanner {
 	color: #444;
 	letter-spacing: 1px;
 	overflow: hidden;
-	animation: 1.8s ease-in-out 0s 1 fadeInFirstBanner forwards, 2.7s ease-in-out 1.8s 1 fadeOutRollUpFirstBanner forwards;
-	-webkit-animation: 1.8s ease-in-out 0s 1 fadeInFirstBanner forwards, 2.7s ease-in-out 1.8s 1 fadeOutRollUpFirstBanner forwards;
+	-webkit-animation: 2.7s ease-in-out 1.8s 1 fadeOutRollUpFirstBanner forwards;
 }
 @keyframes rollUpBannerContainer {
 	0% {
