--- a/site_stylesheet.css
+++ b/site_stylesheet.css
@@ -81,30 +81,23 @@ div#anim_test_2 {
 	animation: 0.001s 0s 1 testAnimation2 forwards;
 	-webkit-animation: 0.001s 0s 1 testAnimation2 forwards;
 }
-@keyframes fadeInFirstBanner {
+@keyframes fadeAndRollUpFirstBanner {
 	0% {
 		opacity: 0;
 		height: 100px; 
 		padding-top: 15px;
 	}
-	25% {
+	10% {
 		opacity: 0;
 		height: 100px; 
 		padding-top: 15px;
 	}
-	100% {
+	40% {
 		opacity: 1;
 		height: 100px; 
 		padding-top: 15px;
 	}
-}
-@keyframes fadeOutRollUpFirstBanner {
-	0% {
-		opacity: 1;
-		height: 100px; 
-		padding-top: 15px;
-	}
-	50% {
+	70% {
 		opacity: 1;
 		height: 100px; 
 		padding-top: 15px;
@@ -137,13 +130,25 @@ div#anim_test_2 {
 		padding-top: 15px;
 	}
 }
-@-webkit-keyframes fadeOutRollUpFirstBanner {
+@-webkit-keyframes fadeOutFirstBanner {
 	0% {
 		opacity: 1;
 		height: 100px; 
 		padding-top: 15px;
 	}
-	99.99% {
+	50% {
+		opacity: 1;
+		height: 100px; 
+		padding-top: 15px;
+	}
+	100% {
+	    opacity: 0;
+		height: 100px; 
+		padding-top: 15px;
+	}
+}
+@-webkit-keyframes rollUpFirstBanner {
+	0% {
 	    opacity: 0;
 		height: 100px; 
 		padding-top: 15px;
@@ -162,7 +167,8 @@ div#firstbanner {
 	color: #444;
 	letter-spacing: 1px;
 	overflow: hidden;
-	-webkit-animation: 2.7s 0s 1 fadeOutRollUpFirstBanner forwards;
+	animation: 4.5s ease-in-out 0s 1 fadeAndRollUpFirstBanner forwards;
+	-webkit-animation: 1.8s ease-in-out 0s 1 fadeInFirstBanner forwards, 2.7s ease-in-out 1.8s 1 fadeOutRollUpFirstBannerFirstBanner forwards, 0.001s 4.49s 1 rollUpFirstBanner forwards;
 }
 @keyframes rollUpBannerContainer {
 	0% {
