--- a/site_stylesheet.css
+++ b/site_stylesheet.css
@@ -116,21 +116,37 @@ div#anim_test_2 {
 @-webkit-keyframes fadeInFirstBanner {
 	0% {
 		opacity: 0;
-		height: 100px; 
-		padding-top: 15px;
 	}
 	25% {
 		opacity: 0;
+	}
+	100% {
+		opacity: 1;
+	}
+}
+
+@-webkit-keyframes rollUpFirstBanner {
+	0% {
 		height: 100px; 
 		padding-top: 15px;
 	}
 	100% {
-		opacity: 1;
-		height: 100px; 
-		padding-top: 15px;
+		height: 0px; 
+		padding-top: 0px;
 	}
 }
-@-webkit-keyframes fadeOutFirstBanner {
+div#firstbanner {
+	opacity: 0;
+	height: 100px; 
+
+	font-weight: 500;
+	color: #444;
+	letter-spacing: 1px;
+	overflow: hidden;
+
+	-webkit-animation: 1.8s ease-in-out 0s 1 fadeInFirstBanner forwards; /*, 2.7s ease-in-out 1.8s 1 fadeOutFirstBanner forwards, 0.001s 4.49s 1 rollUpFirstBanner forwards; */
+}
+@-webkit-keyframes fadeOutRollUpFirstBannerWrapper {
 	0% {
 		opacity: 1;
 		height: 100px; 
@@ -141,14 +157,7 @@ div#anim_test_2 {
 		height: 100px; 
 		padding-top: 15px;
 	}
-	100% {
-	    opacity: 0;
-		height: 100px; 
-		padding-top: 15px;
-	}
-}
-@-webkit-keyframes rollUpFirstBanner {
-	0% {
+	99.99% {
 	    opacity: 0;
 		height: 100px; 
 		padding-top: 15px;
@@ -159,8 +168,8 @@ div#anim_test_2 {
 		padding-top: 0px;
 	}
 }
-div#firstbanner {
-	opacity: 0;
+div#firstbannerwrapper {
+	opacity: 1;
 	height: 100px; 
 	padding-top: 15px;
 	font-weight: 500;
@@ -168,7 +177,7 @@ div#firstbanner {
 	letter-spacing: 1px;
 	overflow: hidden;
 
-	-webkit-animation: 1.8s ease-in-out 0s 1 fadeInFirstBanner, 2.7s ease-in-out 1.8s 1 fadeOutFirstBanner, 0.001s 4.49s 1 rollUpFirstBanner forwards;
+	-webkit-animation: 2.7s ease-in-out 1.8s 1 fadeOutRollUpFirstBannerWrapper forwards;
 }
 @keyframes rollUpBannerContainer {
 	0% {
@@ -217,7 +226,7 @@ div#smallfirstbannertext {
 div#secondbanner {
 	opacity: 0;
 	height: 43px; 
-	padding-top: 25px;
+	padding-top: 22px;
 	font-weight: 500;
 	color: #444;
 	letter-spacing: 1px;
