--- a/site_stylesheet.css
+++ b/site_stylesheet.css
@@ -138,32 +138,31 @@ div#anim_test_2 {
 div#firstbanner {
 	opacity: 0;
 	height: 100px; 
-
+	/*padding-top: 15px;*/
 	font-weight: 500;
 	color: #444;
 	letter-spacing: 1px;
 	overflow: hidden;
-
+	/*animation: 4.5s ease-in-out 0s 1 fadeAndRollUpFirstBanner forwards;*/
 	-webkit-animation: 1.8s ease-in-out 0s 1 fadeInFirstBanner forwards; /*, 2.7s ease-in-out 1.8s 1 fadeOutFirstBanner forwards, 0.001s 4.49s 1 rollUpFirstBanner forwards; */
 }
-@-webkit-keyframes fadeOutRollUpFirstBannerWrapper {
+@-webkit-keyframes fadeOutFirstBannerWrapper {
 	0% {
 		opacity: 1;
-		height: 100px; 
-		padding-top: 15px;
 	}
 	50% {
 		opacity: 1;
-		height: 100px; 
-		padding-top: 15px;
 	}
-	99.99% {
+	100% {
 	    opacity: 0;
+	}
+}
+@-webkit-keyframes rollUpFirstBannerWrapper {
+	0% {
 		height: 100px; 
 		padding-top: 15px;
 	}
 	100% {
-	    opacity: 0;
 		height: 0px; 
 		padding-top: 0px;
 	}
@@ -172,12 +171,8 @@ div#firstbannerwrapper {
 	opacity: 1;
 	height: 100px; 
 	padding-top: 15px;
-	font-weight: 500;
-	color: #444;
-	letter-spacing: 1px;
-	overflow: hidden;
-
-	-webkit-animation: 2.7s ease-in-out 1.8s 1 fadeOutRollUpFirstBannerWrapper forwards;
+	/*animation: 4.5s ease-in-out 0s 1 fadeAndRollUpFirstBanner forwards;*/
+	-webkit-animation: 2.7s ease-in-out 1.8s 1 fadeOutFirstBannerWrapper forwards, .001s 4.49s 1 rollUpFirstBannerWrapper forwards;
 }
 @keyframes rollUpBannerContainer {
 	0% {
